tidying up the torrent client codes and started working on torrent details page
